added things to initial scene

--- a/programming/Assembly-CSharp.csproj
+++ b/programming/Assembly-CSharp.csproj
@@ -95,6 +95,7 @@
      <Compile Include="Assets\Scripts\MazeWall.cs" />
      <Compile Include="Assets\Scripts\Save\GameControl.cs" />
      <Compile Include="Assets\Scripts\pickUp.cs" />
+     <Compile Include="Assets\Scripts\statsChange.cs" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
      <None Include="Assets\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
      <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
